@@ -80,7 +80,7 @@ Channel.prototype.constructor = Channel;
 // properties
 Channel.prototype.live         = false;
 Channel.prototype.title        = '';
-Channel.prototype.viewers      = 0;
+Channel.prototype.viewers      = -1;
 Channel.prototype.thumbnail    = '';
 Channel.prototype.url          = [];
 Channel.prototype.archiveUrl   = '';
