@@ -78,8 +78,8 @@ function PanelList(live, style, extras) {
         emit(that, "configure");
     });
 
-    this.panel.port.on("refresh", function() {
-        emit(that, "refresh");
+    this.panel.port.on("refresh", function(channelId) {
+        emit(that, "refresh", channelId);
     });
 
     this.panel.port.on("openChat", function(channelId) {
