@@ -7,8 +7,8 @@
  */
 
 "use strict";
- 
-// setup event handling 
+
+// setup event handling
 var { emit } = require("sdk/event/core");
 var { EventTarget } = require("sdk/event/target");
 
@@ -57,7 +57,7 @@ function ListView(live, style, extras, chlist) {
                 selectOrOpenTab(channel, what == "archive");
         }).bind(this), channelId);
     }).bind(this));
-    
+
     function updateChannels(p) {
         chlist.getChannelsByType(p, function(channels) {
             if(channels.length) {
@@ -87,11 +87,11 @@ function ListView(live, style, extras, chlist) {
             }
         }
     });
-    
+
     this.list.on("configure", (function() {
         emit(this, "opencm");
     }).bind(this));
-    
+
     // add existing channels
     chlist.getChannelsByType(null, (function(channels) {
         if(channels.length > 0)
@@ -126,7 +126,7 @@ ListView.prototype.setChannelOffline = function(channel) {
 };
 
 ListView.prototype.onChannelChanged = function(channel) {
-    console.log("updating state for "+channel.login);
+    console.log("updating state for", channel.login);
     if(channel.live)
         this.setChannelLive(channel);
     else
