@@ -67,62 +67,103 @@ function getChannelFromJSON(jsonChannel) {
     return ret;
 }
 
+//TODO: going offline doesn't remove the hosting part.
 function getOriginalNameFromHosted(name) {
-    //TODO Breaks for usernames with spaces in them (wcs_europe and _america!)
-    return name.split(" ")[0];
+    var hostingRegExp = "^" + _("provider_twitch_hosted", "(.+?)", ".+") + "$";
+    var matches = name.match(new RegExp(hostingRegExp));
+    if(Array.isArray(matches) && matches.length > 1) {
+        return matches[1];
+    }
+    else {
+        return name;
+    }
 }
 
+var idOfChannel = new Map();
 function getHostedChannels(channels, callback, liveChans) {
-    var channelIds = [];
-    var failed = 0;
-    channels.forEach(function(channel) {
-        qs.queueRequest(baseURL+"/channels/"+channel.login, headers, requeue, function(resp) {
-            if(resp.json && resp.json._id) {
-                channelIds.push(resp.json._id);
-            }
-            else {
-                failed++;
-            }
+    // WARNING: This function is async path madness, could probably prettify it with Promises.
 
-            if(channelIds.length + failed == channels.length) {
-                var hostIds = channelIds.join(",");
-                var doneCount = 0;
-                var done = () => {
-                    doneCount++;
-                    if(doneCount == channelIds.length) {
-                        callback(channels);
-                    }
-                };
-                qs.queueRequest("http://tmi.twitch.tv/hosts?include_logins=1&host="+hostIds, {}, requeue, function(data) {
-                    if(data.json && data.json.hosts.length) {
-                        data.json.hosts.forEach(function(hosting) {
-                            var chan = channels.find((ch) => ch.login === hosting.host_login);
-                            if(hosting.target_login
-                            && !channels.some((ch) => ch.login === hosting.target_login)
-                            && (!Array.isArray(liveChans) || !liveChans.some((ch) => ch.login === hosting.target_login))) {
-                                Twitch.updateChannel(hosting.target_login, function(hostedChannel) {
-                                    chan.uname = _("provider_twitch_hosted", getOriginalNameFromHosted(chan.uname), hostedChannel.uname);
-                                    chan.live = hostedChannel.live;
-                                    chan.title = hostedChannel.title;
-                                    chan.thumbnail = hostedChannel.thumbnail;
-                                    chan.viewers = hostedChannel.viewers;
-                                    chan.category = hostedChannel.category;
-                                    if(!chan.live) {
-                                        chan.uname = getOriginalNameFromHosted(chan.uname);
-                                    }
-                                    done();
-                                }, true);
+    // This function also needs the arguments from its parent in its scope.
+    // In theory the channelIds argument is obsolete, but it's nicer IMO
+    var getHostingInfo = function(channelIds, done) {
+        var hostIds = channelIds.join(",");
+        var existingChans = Array.isArray(liveChans) ? channels.concat(liveChans) : channels;
+
+        qs.queueRequest("http://tmi.twitch.tv/hosts?include_logins=1&host="+hostIds, {}, requeue, function(data) {
+            if(data.json && data.json.hosts.length) {
+                // Check each hosted channel for his status
+                data.json.hosts.forEach(function(hosting) {
+                    var chan = channels.find((ch) => ch.login === hosting.host_login);
+
+                    if(hosting.target_login
+                    && existingChans.every((ch) => ch.login !== hosting.target_login)) {
+                        // Check the hosted channel's status, since he isn't a channel we already have in our lists.
+                        Twitch.updateChannel(hosting.target_login, function(hostedChannel) {
+                            chan.live = hostedChannel.live;
+                            chan.title = hostedChannel.title;
+                            chan.thumbnail = hostedChannel.thumbnail;
+                            chan.viewers = hostedChannel.viewers;
+                            chan.category = hostedChannel.category;
+                            if(!chan.live) {
+                                chan.uname = getOriginalNameFromHosted(chan.uname);
                             }
                             else {
-                                chan.uname = getOriginalNameFromHosted(chan.uname);
-                                chan.live = false;
-                                done();
+                                chan.uname = _("provider_twitch_hosted", getOriginalNameFromHosted(chan.uname), hostedChannel.uname);
                             }
-                        });
+                            done();
+                        }, true);
+                    }
+                    else {
+                        chan.uname = getOriginalNameFromHosted(chan.uname);
+                        chan.live = false;
+                        done();
                     }
                 });
             }
         });
+    };
+
+
+    var channelIds = [];
+    var failed = 0;
+    var cont = function(channelId) {
+        if(!channelId) {
+            ++failed;
+        }
+        else {
+            channelIds.push(channelId);
+        }
+
+        // If we tried to get the id of every channel we got, continue with the
+        // code above (getHostingInfo)
+        if(channelIds.length + failed == channels.length) {
+            var doneCount = 0;
+            var done = () => {
+                if(++doneCount == channelIds.length) {
+                    callback(channels);
+                }
+            };
+            getHostingInfo(channelIds, done);
+        }
+    };
+
+    channels.forEach(function(channel) {
+        // get the internal id for each channel.
+
+        if(idOfChannel.has(channel.login)) {
+            cont(idOfChannel.get(channel.login));
+        }
+        else {
+            qs.queueRequest(baseURL+"/channels/"+channel.login, headers, requeue, function(resp) {
+                if(resp.json && "_id" in resp.json) {
+                    idOfChannel.set(channel.login, resp.json._id);
+                    cont(resp.json._id);
+                }
+                else {
+                    cont();
+                }
+            });
+        }
     });
 }
 
